cmake_minimum_required (VERSION 3.0)
project (proxy_base)
find_package(Threads)
find_package(OpenSSL)
if (OpenSSL_FOUND)
  message("found openssl")
endif()
include_directories(${OPENSSL_INCLUDE_DIR})
add_library(ssl_util ssl_util.c)
set_property(TARGET ssl_util PROPERTY C_STANDARD 99)
target_link_libraries(ssl_util ${CMAKE_THREAD_LIBS_INIT} ${OPENSSL_LIBRARIES})
add_library(proxy_ssl proxy_ssl.c)
set_property(TARGET proxy_ssl PROPERTY C_STANDARD 99)
target_link_libraries(proxy_ssl ${OPENSSL_LIBRARIES})

